<resources>
    <string name="app_name">EAM资产管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">新增</string>
    <string name="action_fresh">刷新</string>
    <string name="log">EAM-资产管理系统</string>
    <string name="please_userid">请输入用户名</string>
    <string name="please_password">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="login">登录</string>
    <string name="login_loging">登录中...</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="login_insertOrg">login_insertOrg</string>
    <string name="login_insertSite">login_insertSite</string>
    <string name="login_personId">login_personId</string>
    <string name="login_userName">login_userName</string>
    <string name="login_displayName">login_displayName</string>
    <string name="login_department">login_department</string>
    <string name="ip_address">ip_address</string>
    <string name="title_activity_load">loading界面</string>
    <string name="title_activity_login">登录界面</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_activity_worklist">工单列表界面</string>
    <string name="title_activity_workdetails">工单详情界面</string>
    <string name="title_activity_workaddnew">新建工单</string>
    <string name="title_activity_workplan">工单计划</string>
    <string name="title_activity_workwoactivity">工单任务</string>
    <string name="title_activity_workplandetails">任务详情</string>
    <string name="title_activity_workwoactivity_add">添加任务</string>
    <string name="title_activity_worklabtrans">实际员工</string>
    <string name="title_activity_worklabtrans_add">添加员工</string>
    <string name="title_activity_workwplabordetails">员工详情</string>
    <string name="title_activity_workwplabor_add">添加员工</string>
    <string name="title_activity_workwpitemdetails">物料详情</string>
    <string name="title_activity_assignment">任务分配</string>
    <string name="title_activity_assignmentdetails">分配详情</string>
    <string name="title_activity_workreport">工单汇报</string>
    <string name="title_activity_labtransdetails">实际员工详情</string>
    <string name="title_activity_failurereport">故障报告</string>
    <string name="title_activity_download">数据下载</string>
    <string name="activity_option_title">选项界面</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="login_successful_hint">登陆成功</string>
    <string name="loading">正在加载中...</string>
    <string name="login_please_login">尚未登录</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_text">再按一次退出程序</string>
    <string name="work_fault_text">故障工单</string>
    <string name="work_prevent_id">预防性维护工单</string>
    <string name="work_status_text">状态维修工单</string>
    <string name="work_project_text">项目工单</string>
    <string name="work_service_text">可维修备件工单</string>
    <string name="work_accident_text">事故工单</string>
    <string name="work_repair_text">抢修工单</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="have_not_data">暂无数据</string>
    <string name="title_activity_wfassig__details">Wfassig_DetailsActivity</string>
    <string name="wfasssig_detail_text">待办任务详情</string>
    <string name="wfassig_desction_text">描述:</string>
    <string name="wfassig_processname_text">过程:</string>
    <string name="wfassig_assigncodedesc_text">任务分配人:</string>
    <string name="wfassig_startdate_text">开始时间:</string>
    <string name="wfassig_assignstatus_text">分配状态:</string>
    <string name="inventory_itemnum_text">库存备件:</string>
    <string name="inventory_location_text">库房:</string>
    <string name="inventory_desc_name_text">备件名称:</string>
    <string name="inventory_location_name_text">库房名称:</string>
    <string name="inventory_issueunit_text">发放单位:</string>
    <string name="inventory_siteid_text">地点:</string>
    <string name="inventory_curbaltotal_text">当前余量:</string>
    <string name="inventory_detail_text">库存详情</string>
    <string name="inventoryActivity">InventoryActivity</string>
    <string name="inventory_cost_text">库存成本</string>
    <string name="inventory_levels_text">库存余量</string>
    <string name="inventory_matrectrans_text">库存交易</string>
    <string name="inventory_storage_text">入库</string>
    <string name="inventory_outbound_text">出库</string>
    <string name="invcost_avgcost_text">平均成本:</string>
    <string name="invcost_lastcost_text">上次接收成本:</string>
    <string name="work_list_title">工单列表</string>
    <string name="work_list_search">搜索</string>
    <string name="work_number">工单号:</string>
    <string name="work_describe">描述:</string>
    <string name="invbalances_binnum_text">货位:</string>
    <string name="invbalances_curbal_text">当前余量:</string>
    <string name="invbalances_title">库存余量</string>
    <string name="invbalances_stagedcurbal_text">暂存余量:</string>
    <string name="invbalances_physcnt_text">实际库存量:</string>
    <string name="invbalance_unitcost_text">单位成本:</string>
    <string name="invbalances_physcntdate_text">实际盘点日期:</string>
    <string name="invbalances_detail_title">库存余量详情</string>
    <string name="matrectrans_issuetype_text">交易类型:</string>
    <string name="matrectrans_actualdate_text">实际日期:</string>
    <string name="matrectrans_title">入库</string>
    <string name="matusetrans_transdate_text">交易日期:</string>
    <string name="matusetrans_quantity_text">数量:</string>
    <string name="matusetrans_linecost_text">行成本:</string>
    <string name="matusetrans_fromsiteid_text">原地点:</string>
    <string name="matusetrans_fromstoreloc_text">原位置:</string>
    <string name="matusetrans_tostoreloc_text">目标位置:</string>
    <string name="matrectrans_detail_title">入库详情</string>
    <string name="matusetrans_detail_title">出库详情</string>
    <string name="matusetrans_refwo_text">工单:</string>
    <string name="matusetrans_location_text">位置:</string>
    <string name="matusetrans_assetnum_text">资产:</string>
    <string name="matusetrans_enterby_text">输入人:</string>
    <string name="work_details">工单详情</string>
    <string name="work_new">新建工单</string>
    <string name="work_num">工单号:</string>
    <string name="work_description">工单描述:</string>
    <string name="work_description_hint">请输入相关描述</string>
    <string name="work_worktype">工单类型:</string>
    <string name="work_assetnum">设备:</string>
    <string name="work_assetnum_name">设备名称:</string>
    <string name="work_glz">管理组:</string>
    <string name="work_gls">管理室:</string>
    <string name="work_glbz">管理班组:</string>
    <string name="addstatus_text">工单建立</string>
    <string name="work_status">状态:</string>
    <string name="work_statusdate">状态日期:</string>
    <string name="work_plan_details">作业详细信息</string>
    <string name="work_jpnum">作业计划:</string>
    <string name="work_isjf">是否按项目计费:</string>
    <string name="work_udprojapprnum">立项编号:</string>
    <string name="work_udevnum">事故号:</string>
    <string name="work_udbugnum">项目预算</string>
    <string name="work_pmnum">预防性维护</string>
    <string name="work_udcreateby">创建人:</string>
    <string name="work_udcreatedate">创建日期:</string>
    <string name="work_reportedby">报告人:</string>
    <string name="work_reportdate">报告日期:</string>
    <string name="work_udisjj">是否紧急维修:</string>
    <string name="work_udyxj">优先级:</string>
    <string name="work_udisaq">是否安全:</string>
    <string name="work_udisbx">是否保修:</string>
    <string name="work_udiscb">是否抄表:</string>
    <string name="work_plan_info">计划信息</string>
    <string name="work_lead">工作负责人:</string>
    <string name="work_udisplayname">承包商负责人:</string>
    <string name="work_targstartdate">计划开始时间:</string>
    <string name="work_targcompdate">计划完成时间:</string>
    <string name="work_em_info">处理班组信息</string>
    <string name="work_udqxbz">抢修班组:</string>
    <string name="work_lead1">抢修负责人:</string>
    <string name="work_supervisor">抢修执行人:</string>
    <string name="work_udsupervisor2">抢修执行人2:</string>
    <string name="work_failure_info">故障详细信息</string>
    <string name="work_failurecode">故障子机构:</string>
    <string name="work_udgzlbdm">故障类别:</string>
    <string name="work_udworkmemo">工作备注:</string>
    <string name="work_udisyq">是否跟进:</string>
    <string name="work_real_info">实际信息</string>
    <string name="work_actstart">实际开始时间:</string>
    <string name="work_actfinish">实际完成时间:</string>
    <string name="work_udtjsj">实际维修时间:</string>
    <string name="work_udtjtime">停机时间:</string>
    <string name="work_udtjsj_hint">请输入时间</string>
    <string name="work_udremark">备注:</string>
    <string name="work_delete">删除</string>
    <string name="work_revise">修改</string>
    <string name="work_insert">新增</string>
    <string name="work_work_flow">工作流</string>
    <string name="work_plan">工单计划</string>
    <string name="work_woactivity">工单任务</string>
    <string name="work_task">任务分配</string>
    <string name="work_realinfo">实际情况</string>
    <string name="work_labtrans">实际员工</string>
    <string name="work_report">故障汇报</string>
    <string name="work_plan_worker">员工</string>
    <string name="work_plan_task">任务:</string>
    <string name="work_plan_meterial">物料</string>
    <string name="invuse_invusenum_text">领料单号:</string>
    <string name="invuse_description_text">描述:</string>
    <string name="invuse_udissueto_text">领料人:</string>
    <string name="invuse_wonum_text">工单:</string>
    <string name="invuse_status_text">状态:</string>
    <string name="invuse_statusdate_text">状态日期:</string>
    <string name="work_woactivity_taskid">任务:</string>
    <string name="work_woactivity_wojo1">编号:</string>
    <string name="work_woactivity_description">描述:</string>
    <string name="work_woactivity_wojo2">需要安检:</string>
    <string name="work_woactivity_udisdo">是否完成:</string>
    <string name="work_woactivity_udisyq">是否延期:</string>
    <string name="work_woactivity_udyqyy">延期原因:</string>
    <string name="work_woactivity_udremark">备注:</string>
    <string name="work_woactivity_targstartdate">计划开始时间:</string>
    <string name="work_woactivity_targcompdate">计划完成时间:</string>
    <string name="work_woactivity_actstart">实际开始时间:</string>
    <string name="work_woactivity_actfinish">实际完成时间:</string>
    <string name="work_woactivity_estdur">持续时间:</string>
    <string name="work_wplabor_laborcode">员工</string>
    <string name="invuse_quantity_text">数量:</string>
    <string name="invuse_displayname_text">申请人:</string>
    <string name="totalcost_v_text">总价:</string>
    <string name="issueunit_text">单位:</string>
    <string name="unitcost_text">单价:</string>
    <string name="udjedx_text">大写金额:</string>
    <string name="udyy_text">采购原因:</string>
    <string name="reqdeliverydate_text">要求的日期:</string>
    <string name="udisxy_text">协议采购:</string>
    <string name="iscsx_text">超限?</string>
    <string name="udcancle_text">取消?</string>
</resources>