<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:background="@color/light_gray2">
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/work_delete"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector3"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/work_revise"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector3"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:text="@string/work_work_flow"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector3"/>
    </LinearLayout>
</LinearLayout>