<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    android:background="#fff"

    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/invcost_num_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_num_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invcost_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/invcost_num_title"
                android:hint="@string/hint_item_num_title"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/invcost_avgcost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invcost_num_title"
                android:layout_marginTop="5dp"
                android:text="@string/invcost_avgcost_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invcost_avgcost_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invcost_num_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/invcost_avgcost_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/invcost_lastcost_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invcost_avgcost_title"
                android:layout_marginTop="5dp"
                android:text="@string/invcost_lastcost_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/invcost_lastcost_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/invcost_avgcost_title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/invcost_lastcost_title"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textSize="16sp" />


        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>