<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qg_prline_details_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="gone"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/invuse_quantity_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/orderqty_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/issueunit_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/issueunit_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/unitcost_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/unitcost_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/totalcost_v_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/totalcost_v_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/udjedx_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/udjedx_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/udyy_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/udyy_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/work_udremark"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/udremark_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/invuse_displayname_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/requestedby_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/reqdeliverydate_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <TextView
            android:id="@+id/reqdeliverydate_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5"
            android:hint="@string/have_not_data"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/udisxy_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <CheckBox
            android:id="@+id/udisxy_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/checbox_choose"
             />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/iscsx_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <CheckBox
            android:id="@+id/iscsx_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/checbox_choose" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginLeft="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/udcancle_text"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimens_16dp" />

        <CheckBox
            android:id="@+id/udcancle_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/checbox_choose" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"></View>


</LinearLayout>


