<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="cdhxqh.shekou.ui.activity.Work_detailsActivity">

    <include layout="@layout/title_main"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_heiht_size"
        android:background="@color/light_gray">
        <Button
            android:id="@+id/work_plan_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_false_shape"
            android:text="@string/work_plan_worker"
            android:textColor="@drawable/text_selector"/>
        <Button
            android:id="@+id/work_plan_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/work_plan_worker"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_false_shape"
            android:text="@string/work_plan_task"
            android:textColor="@drawable/text_selector"/>
        <Button
            android:id="@+id/work_plan_meterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/work_plan_worker"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_false_shape"
            android:text="@string/work_plan_meterial"
            android:textColor="@drawable/text_selector"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>